--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@dmtkpv/ssr": "workspace:*",
     "@vueuse/head": "^1.0.25",
+    "axios": "^1.3.2",
     "express": "^4.18.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
