--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dmtkpv/ssr",
-  "type": "module",
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "dev": "pnpm -C example run dev",
     "prod": "pnpm -C example run prod"
@@ -29,6 +29,15 @@
     "./createRouter": "./lib/createRouter.js",
     "./createSSR": "./lib/createSSR.js"
   },
+  "description": "Server Side Rendering for Vite + Vue",
+  "repository": "github:dmtkpv/ssr",
+  "author": "Dmitriy Karpov",
+  "license": "MIT",
+  "keywords": [
+    "vite",
+    "vue",
+    "ssr"
+  ],
   "files": [
     "lib"
   ]
