--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
     "@vueuse/head": "^1.0.25",
     "axios": "^1.3.2",
     "express": "^4.18.2",
+    "is-mobile": "^4.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
